--- a/app/views/admin_users/dashboard.html.erb
+++ b/app/views/admin_users/dashboard.html.erb
@@ -5,7 +5,7 @@
         <span><%= I18n.t("active_admin.total_no_patients") %>
       </div>
       <div class= "count_div", id= "totals-count" >
-        <span><%= stats_count.total_count_of_patients  || 0%> 
+        <span><%= stats_count.total_count_of_patients || 0 %> 
       </div>
     </div>
     <div class= "state_stats_ind" id="total-observation-count">
@@ -29,7 +29,7 @@
         <span><%=  I18n.t("active_admin.no_of_patients_obs_at_home") %></span>
       </div>
       <div class= "count_div" id="totalssss-count" >
-        <span><%= stats_count.count_of_patients_at_hospitals  || 0%></span>
+        <span><%= stats_count.count_of_patients_at_hospitals || 0 %></span>
       </div>
     </div>
     <div class= "state_stats_ind" id="total-recovered-count" >
@@ -37,7 +37,7 @@
         <span><%= I18n.t("active_admin.no_of_recovered_patient") %></span>
       </div>
       <div class= "count_div" id="totalsssss-count" >
-        <span><%= 0 %></span>
+        <span><%= stats_count.total_recovered || 0 %></span>
       </div>
     </div>
     <div class= "state_stats_ind" id="total-death-count" >
@@ -45,7 +45,7 @@
         <span><%= I18n.t("active_admin.no_of_death") %></span>
       </div>
       <div class= "count_div" id="totalsssssss-count" >
-        <span><%= 0 %></span>
+        <span><%= stats_count.total_died || 0 %></span>
         </div>
     </div>
   <% end %>
