--- a/app/views/admin_users/detailed_report.html.erb
+++ b/app/views/admin_users/detailed_report.html.erb
@@ -15,6 +15,8 @@
       <td><%= I18n.t('total_no_of_people_in_observation_at_home') %></td>
       <td><%= I18n.t('total_no_of_people_in_observation_at_hospital') %></td>
       <td><%= I18n.t('total_no_of_people_admitted_today') %></td>
+      <td><%= I18n.t('total_no_of_people_recovered_today') %></td>
+      <td><%= I18n.t('total_no_of_people_died_today') %></td>
     </tr>
     <% @stats_counts.each do |stats_count| %>
       <tr>
@@ -23,6 +25,8 @@
         <td><%= stats_count.count_of_patients_at_homes %></td>
         <td><%= stats_count.count_of_patients_at_hospitals %></td>
         <td><%= stats_count.admitted_today %></td>
+        <td><%= stats_count.total_recovered %></td>
+        <td><%= stats_count.total_died %></td>
       </tr>
     <% end %>
   </table>
