--- a/app/assets/stylesheets/admin_users.scss
+++ b/app/assets/stylesheets/admin_users.scss
@@ -52,11 +52,11 @@
   font-size: 50px;
 }
 
-#add-or-update{
+#data-center{
   margin: 10px 0;
 }
 
-#add-or-update h4{
+#data-center h4{
   text-align: center;
   font-weight: bolder;
 }
@@ -83,4 +83,111 @@ table#stats_report-table td.first-field{
 
 table#stats_report-table td.second-field{
    padding: 0 15px;
- }
+}
+
+#head-section h4{
+  width: 90%;
+  float: left;
+}
+
+#action-buttons{
+  float: left;
+}
+
+table#entries-table{
+  border: 1px solid black
+}
+
+table#entries-table td{
+  border: 1px solid black;
+  padding: 5px 10px;
+}
+
+table #entries-tabletr.header{
+  text-align: center;
+}
+
+#overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+}
+
+#text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%,-50%);
+  color: black;
+  background: white;
+  padding: 25px 50px;
+} 
+ 
+#stats_report-form{
+  
+}
+
+.digg_pagination {
+  margin-top: 10px;
+  float: right;
+  background: white;
+  cursor: default;
+  /* self-clearing method: */ }
+  .digg_pagination a, .digg_pagination span, .digg_pagination em {
+    padding: 0.2em 0.5em;
+    display: block;
+    float: left;
+    margin-right: 1px; }
+  .digg_pagination .disabled {
+    color: #999999;
+    border: 1px solid #dddddd; }
+  .digg_pagination .current {
+    font-style: normal;
+    font-weight: bold;
+    background: #2e6ab1;
+    color: white;
+    border: 1px solid #2e6ab1; }
+  .digg_pagination a {
+    text-decoration: none;
+    color: #105cb6;
+    border: 1px solid #9aafe5; }
+    .digg_pagination a:hover, .digg_pagination a:focus {
+      color: #000033;
+      border-color: #000033; }
+  .digg_pagination .page_info {
+    background: #2e6ab1;
+    color: white;
+    padding: 0.4em 0.6em;
+    width: 22em;
+    margin-bottom: 0.3em;
+    text-align: center; }
+    .digg_pagination .page_info b {
+      color: #000033;
+      background: #6aa6ed;
+      padding: 0.1em 0.25em; }
+  .digg_pagination:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden; }
+  * html .digg_pagination {
+    height: 1%; }
+  *:first-child + html .digg_pagination {
+    overflow: hidden; }
+
+.update span:hover{
+  cursor: pointer;
+}
+
+.destroy span:hover{
+  cursor: pointer;
+}
