--- a/app/assets/stylesheets/stats_reports.scss
+++ b/app/assets/stylesheets/stats_reports.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the StatsReports controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.green_button{
+  background-color: #4CAF50;
+}
+
+.red_button{
+  background-color: #f44336;
+}
