--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </head>
@@ -18,25 +18,19 @@
       <div id="header-space">
       </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-          <img src="/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-          Corona Safe Network
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <%= link_to image_tag("/Coronasafe-logo.png", class: "logo-img d-inline-block align-top", alt: "corona-safe"), root_path, class: 'nav-link navbar-link' %>
         <div class="collapse navbar-collapse" id="navbarNav">
           <div id="menu-links">
             <ul class="navbar-nav">
               <% if admin_user_signed_in? %>
                 <li class="nav-item">
-                  <%= link_to 'Dashboard', root_path, :class => 'nav-link navbar-link' %>
+                  <%= link_to 'Dashboard', root_path, class: 'nav-link navbar-link' %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to 'Stats Reports', detailed_reports_page_path, :class => 'nav-link navbar-link' %>
+                  <%= link_to 'Stats Reports', detailed_reports_page_path, class: 'nav-link navbar-link' %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to 'Data Center', data_center_path, :class => 'nav-link navbar-link' %>
+                  <%= link_to 'Data Center', data_center_path, class: 'nav-link navbar-link' %>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">District/State</a>
@@ -51,14 +45,14 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <% if admin_user_signed_in? %>
-                  <%= link_to 'Edit profile', edit_admin_user_registration_path, :class => 'nav-link navbar-link' %>
+                  <%= link_to 'Edit profile', edit_admin_user_registration_path, class: 'nav-link navbar-link' %>
                 <% end %>
               </li>
               <li class="nav-item">
                 <% if admin_user_signed_in? %>
-                  <%= link_to "Logout", destroy_admin_user_session_path, method: :delete, :class => 'nav-link navbar-link'  %>
+                  <%= link_to "Logout", destroy_admin_user_session_path, method: :delete, class: 'nav-link navbar-link'  %>
                 <% else %>
-                  <%= link_to "Login", new_admin_user_session_path, :class => 'nav-link navbar-link'  %>
+                  <%= link_to "Login", new_admin_user_session_path, class: 'nav-link navbar-link' %>
                 <% end %>
               </li>
             </ul>
