--- a/app/views/stats_reports/_form.html.erb
+++ b/app/views/stats_reports/_form.html.erb
@@ -9,9 +9,22 @@
         </ul>
       </div>
     <% end %>
+    
+  <% if stats_report.new_record? %>
+    <tr>
+      <td class="first-field" width = "20%"><label>Country</label></td><td width = "30%"><div id="country"><%= select :filter, :country_id, @countries.map{|x| ["#{I18n.t("country.#{x.name}")}", x.id]}, selected: @country.try(:id), prompt: "Select a Country", onChange: "get_states(this.value)" %></div></td>
+      <td class="second-field" width = "20%"><label>State</label></td><td width = "30%"><div id="state"><%= select :filter, :state_id, @states.map{|x| ["#{I18n.t("state.#{x.name}")}", x.id]}, selected: @state.try(:id), prompt: "Select a State", onchange: "send_view_request(this.value)" %></div></td>
+    </tr>
+  <% end %>
     <tr>
       <td class="first-field" width = "20%"><%= f.label :date %> </td><td width = "30%"><%= f.date_select :date %></td>
-      <td class="second-field" width = "20%"><%= f.label :district_id %> </td><td width = "30%"><%= f.select :district_id, @districts.map{|x| ["#{I18n.t("district.#{x.name}")}", x.id]} %></td>
+      <td class="second-field" width = "20%"><%= f.label :district_id %> </td><td width = "30%" id="district">
+        <% if stats_report.new_record? %>
+          <%= f.select :district_id, @districts.map{|x| ["#{I18n.t("district.#{x.name}")}", x.id]}, selected: @district.try(:id) %>
+        <% else %>
+          <%= text_field :dummy, :district, value: I18n.t("district.#{stats_report.district.try(:name)}"), disabled: true, class: "textfield-number" %>
+        <% end %>
+      </td>
     </tr>
     <tr>
       <td class="first-field"><%= f.label :total_no_patients %></td><td><%= f.text_field :total_no_patients, disabled: true, class: "textfield-number" %></td>
@@ -29,7 +42,7 @@
       <td class="first-field"><%= f.label :no_of_patients_died_today %></td><td><%= f.text_field :no_of_patients_died_today, class: "textfield-number" %></td>
     </tr>
     <tr>
-      <td colspan="2" align="center"><%= f.submit "Save" %></td><td colspan="2" align="center"> <button type="button" onclick="off()">Cancel</button></td>
+      <td colspan="2" align="center"><%= f.submit "Save", class: "button_css green_button width-100px float-right" %></td><td colspan="2" align="center"> <button class="width-100px red_button button_css" type="button" onclick="off()">Cancel</button></td>
     </tr>
   </table>
 <% end %>
@@ -66,5 +79,27 @@
 
     });
     $('#stats_report_total_no_patients').val(sum);
+   })
+   
+   $('#filter_country_id').change(function(){
+     value = $(this).val();
+     $.ajax({
+       type: 'POST',
+       url: '/stats_reports/get_states_for_forms',
+       data: {country_id: value}
+     });
+   })
+   
+   $('#new_stats_report').submit(function(){
+     var country = $('#filter_country_id').val();
+     var state = $('#filter_state_id').val();
+     if(country == ""){ 
+       alert("Select a Country");
+       return false;
+     }
+     if(state == ""){
+       alert("Select a State");
+       return false;
+     }
    })
  </script>
