--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,14 +13,18 @@
  *= require_tree .
  *= requirte_self
  */
-
- #content{
+#content{
    width: 1000px !important;
    margin: 0 auto;
 }
 
 #header-space{
   height: 75px;
+}
+
+.logo-img{
+  width: 100px;
+  height: 35px;
 }
 
 .bg-light{
@@ -50,9 +54,155 @@
 .flash-msg {
   margin-top: 20px;
   background-color: #fff1ab;
-  padding: 2px;
+  padding: 0px;
   text-align: center;
   font-size: 13px;
   font-weight: 600;
   border: 1px solid #EFDC86;
+}
+
+.new_admin_user{
+  max-width: 500px;
+  margin: 0 auto;
+}
+.button_css {
+  display: block;
+  width: 250px;
+  background: #4E9CAF;
+  padding: 5px;
+  text-align: center;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  float: left;
+  cursor: pointer;
+}
+
+.button_css:hover {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.login{
+  width: 100px !important;
+  background-color: #4CAF50;
+}
+
+.forgot-password{
+  float: right;
+  margin-top: 2px;
+  cursor: pointer;
+}
+
+.forgot-password:hover{
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Full-width input fields */
+.container input[type=email], input[type=text], input[type=password] {
+  width: 100%;
+  padding: 5px 10px;
+  margin: 5px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+.login-container{
+  padding: 0 15px;
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+  text-align: center;
+}
+
+.imgcontainer img {
+  width: 150px;
+  height: 100px;
+}
+
+.container {
+  padding: 10px 15px;
+  max-width: 500px;
+  display: table;
+}
+
+#id01{
+  max-width: 500px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+#id01 h4{
+  text-align: center;
+}
+
+.container label {
+  margin-bottom: 0rem !important;
+}
+
+.send-me-mail{
+  width: 300px !important;
+}
+
+.forget-login{
+  margin-top: 2px;
+}
+
+#devise-errors h2 {
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 0 25px;
+}
+
+.cancel-delete-buttons{
+  width: 180px !important;
+}
+
+.delete-buttons{
+  background-color: #f44336;
+}
+
+.back-buttons{
+  margin-top: 2px;
+}
+
+.back-buttons:hover{
+  text-decoration: none;
+  cursor: pointer;
+  color: white;
+}
+
+.cancel-section{
+  padding: 15px !important;
+  height: 100px !important;
+  margin-bottom: 20px;
+}
+
+.green_button{
+  background-color: #4CAF50;
+}
+
+.red_button{
+  background-color: #f44336;
+}
+
+.green_button:hover{
+  text-decoration: none;
+  cursor: pointer;
+  color: white;
+}
+
+.red_button:hover{
+  text-decoration: none;
+  cursor: pointer;
+  color: white;
+}
+
+.width-100px{
+  width: 100px;
 }
