report section completed

--- a/app/views/reports/_date_selecter.html.erb
+++ b/app/views/reports/_date_selecter.html.erb
@@ -1,6 +1,6 @@
 <div class="start-date">
     <%= label_tag(:start_date, "From :") %>
-    <%= date_field_tag(:start_date, Date.yesterday)%>
+    <%= date_field_tag(:start_date, "")%>
 </div>
 
 <div class="end-date">
