--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -7,7 +7,8 @@
 }
 
 .field-pair {
-    padding: 1px;
+    float: left;
+    padding: 20px 0;
     width: 100%;
 }
 
@@ -20,9 +21,12 @@
     float: left;
 }
 
-.date-field {
-    width: 100%;
+.label-pair {
     float: left;
+}
+
+.date-field {
+    float: right;
 }
 
 .start-date {
@@ -39,6 +43,19 @@
     width: 100%;
 }
 
+.report {
+    margin-top: 30px;
+}
+
 .report, th, td{
     border: 1px solid black;
+    padding: 15px;
+    text-align: center;
+}
+
+.no-entries {
+    margin-top: 30px;
+    border: 1px solid gray;
+    text-align: center;
+    font-size: 20px;
 }
